# couchdb-design

./: Cargo.toml  Dockerfile  README.md
src/: designcompare.rs  designdoc.rs  designview.rs  main.rs
